--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: ""
 url: "http://houseonahill.de"
 github_username: houseonahill
-
+collections:
+  - home_sections
 # Build settings
 markdown: kramdown
