--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,7 @@
 
 # Site settings
 title: House on a Hill
-email: info@houseonahill.de
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: ""
-url: "http://houseonahill.de"
-github_username: houseonahill
+baseurl: "/houseonahill.de"
 collections:
   - home_sections
 # Build settings
